--- a/style/_app.scss
+++ b/style/_app.scss
@@ -28,7 +28,13 @@
     }
 
     .ant-card {
-        min-height: 390px;
+        height: 320px;
+
+        .ant-card-body {
+            height: 385px;
+            overflow: auto;
+        }
+
     }
 
 }
