--- a/style/_app.scss
+++ b/style/_app.scss
@@ -1,8 +1,8 @@
 .page_task {
-    height: -webkit-fill-available;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    //height: -webkit-fill-available;
+    //display: flex;
+    //flex-direction: column;
+    //justify-content: center;
 
     .main {
         flex: 1;
@@ -10,13 +10,13 @@
 }
 
 .task-panel {
-    height: -webkit-fill-available;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    justify-content: center;
+    //height: -webkit-fill-available;
+    //display: flex;
+    //-webkit-box-orient: vertical;
+    //-webkit-box-direction: normal;
+    //flex-direction: column;
+    //-webkit-box-pack: center;
+    //justify-content: center;
 
     .ant-row {
         flex: 1;
@@ -28,10 +28,10 @@
     }
 
     .ant-card {
-        height: 320px;
+        height: 100%;
 
         .ant-card-body {
-            height: 385px;
+            height: 300px;
             overflow: auto;
         }
 
