--- a/style/_app.scss
+++ b/style/_app.scss
@@ -91,8 +91,13 @@
     width: 100%;
 }
 
+.ant-input-group-addon,
 .ant-select-selection,
 .ant-input,
 .ant-btn {
     border-radius: 0;
+}
+
+.ant-btn {
+    padding: 0 10px;
 }
