--- a/style/_app.scss
+++ b/style/_app.scss
@@ -42,9 +42,10 @@
 
     .sub-panel {
 
-
     }
-
+    .ant-card-head-title {
+        font-size: 12px;
+    }
     .ant-card {
         height: 100%;
 
@@ -91,6 +92,8 @@
     width: 100%;
 }
 
+.ant-pagination-prev .ant-pagination-item-link, .ant-pagination-next .ant-pagination-item-link,
+.ant-pagination-item,
 .ant-input-group-addon,
 .ant-select-selection,
 .ant-input,
@@ -100,4 +103,25 @@
 
 .ant-btn {
     padding: 0 10px;
+}
+
+.ant-table-thead {
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+.ant-card-body {
+    &:hover {
+        .abs-delete {
+            opacity: 1;
+        }
+    }
+}
+
+.abs-delete {
+    position: absolute;
+    bottom: -13px;
+    right: -13px;
+    cursor: pointer;
+    opacity: 0;
 }
